fix href to science

--- a/WPIMajorTracking/secured/majorsheet.html
+++ b/WPIMajorTracking/secured/majorsheet.html
@@ -56,7 +56,7 @@
 						<li><a href="#math-other">Other Courses</a></li> 
 					</ul>
 				</li>
-				<li><a href="#">Science</a></li>
+				<li><a href="#science">Science</a></li>
 			</ul>
 		</div>
 	</div>
@@ -458,7 +458,7 @@
 
 		<hr>
 
-		<div class="majorsheet-box" id="math">
+		<div class="majorsheet-box" id="science">
 			<h3>Basic Science &amp; Engineering Science</h3>
 			<p>
 				Courses satisfying the science requirement must come from the BB,BME, CE, CH, CHE, ECE, ES, GE, ME, PH, RBE disciplines . At least three courses must come from BB, CH, GE, PH, where at least two courses are from one of these disciplines.
