More email changes

--- a/WPIMajorTracking/secured/majorsheet.html
+++ b/WPIMajorTracking/secured/majorsheet.html
@@ -70,6 +70,7 @@
 			<input type="text" class="form-control" id="advisor_email" name="advisor_email" placeholder="Advisor's Email" required>
 			<input type="hidden" name="sheet_id" id="sheet_id" value="{{ id }}"/>
 			<input type="hidden" name="user_name" id="user_name" value="{{ user.name }}"/>
+			<input type="hidden" name="user_lname" id="user_lname" value="{{ user.last_name }}"/>
 			<button type="submit" class="btn-margin btn btn-success">
 				<span class="glyphicon glyphicon-envelope" aria-hidden="true"></span>
 				Send Invitation
